--- a/surfit/configure.in
+++ b/surfit/configure.in
@@ -1,9 +1,10 @@
 # Process this file with autoconf to produce a configure script.
-AC_INIT(surfit/src/surfit_wrap.cxx)
-AM_INIT_AUTOMAKE(surfit,1.0.0pre)
+AC_INIT(src/surfit/surfit_wrap.cxx)
+AM_INIT_AUTOMAKE(surfit,1.0)
 
 # test for c++ features
 AC_PROG_CXX
+AC_PROG_CXXCPP
 # check for stdc headers
 AC_HEADER_STDC
 
@@ -11,16 +12,21 @@ AC_LIBTOOL_WIN32_DLL
 AM_PROG_LIBTOOL
 AC_SUBST(LIBTOOL_DEPS)
 
-# check for stl library
-AC_CHECK_LIB(stdc++, main, [LIBS_SURFIT="-llibstdc++ $LIBS_SURFIT"], AC_MSG_ERROR(surfit requires libstdc++))
+# check for pthread 
+AC_CHECK_LIB(pthread, main, [PTHREAD_INSTALLED="YES"], PTHREAD_INSTALLED="")
+AH_TEMPLATE([HAVE_THREADS],[Define if you want to compile with multithreading support])
 
-AH_TEMPLATE([HAVE_FLTKLIB],
-            [Define if you have fltk libraries])
-#AC_DEFINE_UNQUOTED(HAVE_FLTKLIB)
+# check for zlib
+AC_CHECK_HEADERS(zlib.h)
+AC_CHECK_LIB(z, zlibVersion, [ZLIB_INSTALLED="YES"], ZLIB_INSTALLED="")
 
-AH_TEMPLATE([HAVE_GL_WORKS],
-            [Define if you have OpenGL libraries])
-#AC_DEFINE_UNQUOTED(HAVE_GL_WORKS)
+CXXFLAGS="-O2"
+
+AC_ARG_ENABLE(debug, 
+	AC_HELP_STRING(--enable-debug, compiling with debugging info),
+	[if test x$enableval = xyes; then 
+	CXXFLAGS="-g -ggdb"
+	fi])
 
 # Get the operating system and version number...
 uname=`uname`
@@ -30,12 +36,14 @@ if test "x$uname" = x; then
     uname="CYGWIN"
 fi
 
+AC_ARG_ENABLE(pthread,  
+	AC_HELP_STRING(--enable-pthread, compiling with threads support),
+	[if test x$enableval = xno; then
+	PTHREAD_INSTALLED="" 
+	fi])
 
 AC_ARG_ENABLE(freeflow, [  --enable-freeflow       turn on freeflow compilation [default=yes]])
 AC_ARG_ENABLE(globe,    [  --enable-globe          turn on globe compilation [default=yes]])
-AC_ARG_ENABLE(bula,     [  --enable-bula           turn on bula compilation [default=yes]])
-AC_ARG_ENABLE(funner,   [  --enable-funner         turn on funner compilation [default=yes]])
-
 
 if test x$enable_freeflow != xno; then
    BUILD_FREEFLOW="YES"
@@ -48,19 +56,6 @@ if test x$enable_globe != xno; then
 else
    BUILD_GLOBE=""
 fi
-
-if test x$enable_funner != xno; then
-   BUILD_FUNNER="YES"
-else
-   BUILD_FUNNER=""
-fi
-
-if test x$enable_bula != xno; then
-   BUILD_BULA="YES"
-else
-   BUILD_BULA=""
-fi
-
 
 #--------------------------------------------------------------------
 #	Try to locate the Tcl package
@@ -135,7 +130,7 @@ if test -z "$TCLINCLUDE"; then
 fi
 if test -z "$TCLINCLUDE"; then
 #	TCLINCLUDE="-I/usr/local/include"
-    	AC_MSG_RESULT(not found)
+    	AC_MSG_ERROR(not found. surfit requies Tcl!)
 fi
 else
         AC_MSG_RESULT($TCLINCLUDE)
@@ -152,178 +147,25 @@ for i in $dirs ; do
 	fi
 done
 if test -z "$TCLLIB"; then
-	AC_MSG_RESULT(not found)
+	AC_MSG_ERROR(not found. surfit requies Tcl!)
 #	TCLLIB="-L/usr/local/lib"
 fi
 else
 AC_MSG_RESULT($TCLLIB)
 fi
 
+if [[ "$PTHREAD_INSTALLED" = "YES" ]] ; then 
+	AC_DEFINE(HAVE_THREADS)
+fi
+
 AC_SUBST(TCLINCLUDE)
 AC_SUBST(TCLLIB)
 
-#--------------------------------------------------------------------
-#	Try to locate the FLTK package
-#--------------------------------------------------------------------
-
-FLTK_INCLUDE=
-FLTK_LIB=
-
-AC_ARG_WITH(fltk_incl,[  --with-fltk_incl=path     Set location of fltk include directory],[
-	FLTK_INCLUDE="-I$withval"], [FLTK_INCLUDE=])
-AC_ARG_WITH(fltk_lib,[  --with-fltk_lib=path      Set location of fltk library directory],[
-	FLTK_LIB="-L$withval"], [FLTK_LIB=])
-
-AC_MSG_CHECKING(for fltk header files)
-if test -z "$FLTK_INCLUDE"; then
-AC_TRY_CPP([#include <FL/Fl.H>], , FLTK_INCLUDE="")
-if test -z "$FLTK_INCLUDE"; then
-	dirs="$prefix/include /usr/local/include /usr/include /opt/local/include"
-	for i in $dirs ; do
-		if test -r $i/Fl/Fl.H; then
-			AC_MSG_RESULT($i)
-			FLTK_INCLUDE="-I$i"
-			break
-		fi
-	done
-fi
-if test -z "$FLTK_INCLUDE"; then
-	FLTK_INCLUDE="-I/usr/local/include"
-    	AC_MSG_RESULT(not found)
-fi
-else
-        AC_MSG_RESULT($FLTK_INCLUDE)
-fi
-
-AC_MSG_CHECKING(for fltk library)
-if test -z "$FLTK_LIB"; then
-dirs="$prefix/lib /usr/local/lib /usr/lib /opt/local/lib"
-for i in $dirs ; do
-	if test -r $i/libfltk.a; then
-	    AC_MSG_RESULT($i)
-	    FLTK_LIB="-L$i -lfltk "
-	    AC_DEFINE(HAVE_FLTKLIB)
-	    break
-	fi
-done
-
-if test -z "$FLTK_LIB"; then
-	AC_MSG_RESULT(not found)
-	FLTK_LIB="-L/usr/local/lib"
-        BUILD_BULA=""
-        BUILD_FUNNER=""
-fi
-else
-AC_MSG_RESULT($FLTK_LIB)
-fi
-
-AC_MSG_CHECKING(for fltk_gl library)
-if test -z "$FLTK_GL_LIB"; then
-dirs="$prefix/lib /usr/local/lib /usr/lib /opt/local/lib"
-for i in $dirs ; do
-	if test -r $i/libfltk_gl.a; then
-	    AC_MSG_RESULT($i)
-	    FLTK_GL_LIB="-L$i -lfltk_gl "
-	    break
-	fi
-done
-
-if test -z "$FLTK_GL_LIB"; then
-	AC_MSG_RESULT(not found)
-	FLTK_GL_LIB="-L/usr/local/lib"
-        BUILD_BULA=""
-        BUILD_FUNNER=""
-fi
-else
-AC_MSG_RESULT($FLTK_GL_LIB)
-fi
-
-
-AC_SUBST(FLTK_INCLUDE)
-AC_SUBST(FLTK_LIB)
-AC_SUBST(FLTK_GL_LIB)
-                  
-case $uname in
-    CYGWIN* | MINGW*)
-	dnl Cygwin environment...
-	CFLAGS="-mwindows -DWIN32 $CFLAGS"
-	CXXFLAGS="-mwindows -DWIN32 $CXXFLAGS"
-	LDFLAGS="-mwindows $LDFLAGS"
-	LIBS="$LIBS -lole32 -lwsock32 -lcomctl32"
-
-	GLLIB=""
-
-	AC_CHECK_HEADER(GL/gl.h,GLLIB="-lopengl32")
-	AC_CHECK_HEADER(GL/glu.h,GLLIB="-lglu32 $GLLIB")
-	
-	;;
-
-    Darwin*)
-        # MacOS X uses Carbon for graphics...
-        LIBS="$LIBS -framework Carbon -framework ApplicationServices"
-
-        GLLIB="-framework AGL -framework OpenGL"
-
-	;;
-
-    *)
-	# All others are UNIX/X11...
-
-	dnl Check for X11...
-	AC_PATH_XTRA
-
-	if test x$no_x = xyes; then
-	    AC_MSG_WARN(Configure could not find required X11 libraries.)
-	    GLLIB=""
-	else 
-
-   	    LIBS="$LIBS -lXext -lX11 $X_EXTRA_LIBS"
-	    CFLAGS="$CFLAGS$X_CFLAGS"
-	    CXXFLAGS="$CXXFLAGS$X_CFLAGS"
-	    LDFLAGS="$X_LIBS $LDFLAGS"
-
-	    # Check for OpenGL unless disabled...
-	    GLLIB=""
-
-
-	        AC_SEARCH_LIBS(dlopen, dl)
-	        AC_CHECK_HEADER(GL/gl.h,
-		    AC_CHECK_LIB(GL, glXMakeCurrent, GLLIB="-lGL", \
-		        AC_CHECK_LIB(MesaGL,glXMakeCurrent, GLLIB=" -lMesaGL",,\
-			    -lm), \
-		        -lm)
-	        )
-	        AC_CHECK_HEADER(GL/glu.h,
-		    if test x$ac_cv_lib_GL_glXMakeCurrent = xyes; then
-		        GLLIB="-lGLU $GLLIB"
-		    fi
-		    if test x$ac_cv_lib_MesaGL_glXMakeCurrent = xyes; then
-		        GLLIB="-lMesaGLU $GLLIB"
-		    fi
-	        )
-
-	fi
-
-	;;
-esac
-
-if test -z "$GLLIB"; then
-   AC_MSG_WARN(surfit was configured without OpenGL support!)
-   BUILD_BULA=""
-   BUILD_FUNNER=""
-else
-   AC_DEFINE(HAVE_GL_WORKS)
-fi
-
-                
-AC_SUBST(GLLIB)
-
 AC_CONFIG_HEADER(config.h:config.h.in)
 
+AM_CONDITIONAL(HAVE_PTHREAD_INSTALLED, [test "x$PTHREAD_INSTALLED" != "x"])
+AM_CONDITIONAL(HAVE_ZLIB_INSTALLED, [test "x$ZLIB_INSTALLED" != "x"])
 AM_CONDITIONAL(MAKE_FREEFLOW,  [test "x$BUILD_FREEFLOW" != "x"])
 AM_CONDITIONAL(MAKE_GLOBE,     [test "x$BUILD_GLOBE" != "x"])
-AM_CONDITIONAL(MAKE_BULA,      [test "x$BUILD_BULA" != "x"])
-AM_CONDITIONAL(MAKE_FUNNER,    [test "x$BUILD_FUNNER" != "x"])
-
 
 AC_OUTPUT([Makefile])
