acmlbooster for linux (fixed)
git-svn-id: svn://localhost/trunk@699 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/acmlbooster/Makefile.am
+++ b/surfit/acmlbooster/Makefile.am
@@ -26,7 +26,7 @@ libacmlbooster_la_SOURCES += src/acml_threads.cpp
 libacmlbooster_la_HEADERS =  src/acmlbooster.h
 libacmlbooster_la_HEADERS += src/acmlbooster_ie.h       
 
-libacmlbooster_la_LIBADD = $(TCLLIB) $(SSTUFFLIB) $(SURFITLIB) $(ACMLLIB)
+libacmlbooster_la_LIBADD = $(ACMLLIB) $(TCLLIB) $(SSTUFFLIB) $(SURFITLIB) 
 libacmlbooster_la_LDFLAGS = -version-info 1:0:0 -no-undefined --dllname libacmlbooster.dll
 
 dist-hook:
