--- a/surfit/doc/surfit.cfg
+++ b/surfit/doc/surfit.cfg
@@ -4,7 +4,7 @@
 # Project related configuration options
 #---------------------------------------------------------------------------
 PROJECT_NAME           = "surfit manual"
-PROJECT_NUMBER         = 1.0
+PROJECT_NUMBER         = 2.0
 OUTPUT_DIRECTORY       = 
 CREATE_SUBDIRS         = NO
 OUTPUT_LANGUAGE        = English
@@ -83,11 +83,14 @@ WARN_LOGFILE           = surfit.log
 # configuration options related to the input files
 #---------------------------------------------------------------------------
 
-#                        ../surfit/doc/get_start.doc \
-
 INPUT                  = src/install.doc \
+                         src/get_start.doc \
                          src/features.doc \
-                         src/examples.doc \
+                         src/examples_pnts.doc \
+			 src/examples_curv.doc \
+			 src/examples_area.doc \
+			 src/examples_cntr.doc \
+			 src/examples_surf.doc \
                          src/cmofs.doc \
                          src/groups.doc \
 			 src/datatypes.doc \
@@ -97,13 +100,15 @@ INPUT                  = src/install.doc \
 			 ../src/surfit/area_tcl.h \
 			 ../src/surfit/curv_tcl.h \
 			 ../src/surfit/curvs_tcl.h \
-			 ../src/surfit/cntr_tcl.h 
+			 ../src/surfit/cntr_tcl.h \
+			 ../src/surfit/surf_tcl.h \
+			 ../src/surfit/surfs_tcl.h
 FILE_PATTERNS          = *.doc
 RECURSIVE              = NO
 EXCLUDE                = 
 EXCLUDE_SYMLINKS       = NO
 EXCLUDE_PATTERNS       = 
-EXAMPLE_PATH           = ../surfit/examples/test/
+EXAMPLE_PATH           = ../examples
 EXAMPLE_PATTERNS       = *.tcl
 EXAMPLE_RECURSIVE      = YES
 IMAGE_PATH             = .
