--- a/surfit/Makefile.am
+++ b/surfit/Makefile.am
@@ -99,6 +99,8 @@ libsurfit_la_SOURCES += src/surfit/f_cntr_ineq.cpp
 libsurfit_la_SOURCES += src/surfit/f_completer.cpp                                               
 libsurfit_la_SOURCES += src/surfit/f_curv.cpp                                                    
 libsurfit_la_SOURCES += src/surfit/f_curv_ineq.cpp 
+libsurfit_la_SOURCES += src/surfit/f_curv_surf.cpp
+libsurfit_la_SOURCES += src/surfit/f_curv_surf_ineq.cpp
 libsurfit_la_SOURCES += src/surfit/f_surf.cpp                                                    
 libsurfit_la_SOURCES += src/surfit/f_surf_ineq.cpp                                               
 libsurfit_la_SOURCES += src/surfit/f_global_tcl.cpp                                              
@@ -200,6 +202,8 @@ libsurfit_la_HEADERS += src/surfit/f_cntr_ineq.h
 libsurfit_la_HEADERS += src/surfit/f_curv.h                 
 libsurfit_la_HEADERS += src/surfit/f_curv_ineq.h                 
 libsurfit_la_HEADERS += src/surfit/f_completer.h       
+libsurfit_la_HEADERS += src/surfit/f_curv_surf.h
+libsurfit_la_HEADERS += src/surfit/f_curv_surf_ineq.h
 libsurfit_la_HEADERS += src/surfit/f_surf.h            
 libsurfit_la_HEADERS += src/surfit/f_surf_ineq.h       
 libsurfit_la_HEADERS += src/surfit/f_global_tcl.h      
@@ -284,8 +288,8 @@ libfreeflow_la_SOURCES += src/freeflow/prod_points_tcl.cpp
 
 libfreeflow_la_HEADERS  = src/freeflow/flow.h                  
 libfreeflow_la_HEADERS += src/freeflow/flow_data_manager.h     
-libfreeflow_la_SOURCES += src/freeflow/flow_surf_internal.h 
-libfreeflow_la_SOURCES += src/freeflow/flow_surf_tcl.h 
+libfreeflow_la_HEADERS += src/freeflow/flow_surf_internal.h 
+libfreeflow_la_HEADERS += src/freeflow/flow_surf_tcl.h 
 libfreeflow_la_HEADERS += src/freeflow/flow_ie.h               
 libfreeflow_la_HEADERS += src/freeflow/flow_variables.h        
 libfreeflow_la_HEADERS += src/freeflow/freeflow.h              
