--- a/surfit/doc/surfit.cfg
+++ b/surfit/doc/surfit.cfg
@@ -159,7 +159,7 @@ HTML_STYLESHEET        = src/surfit.css
 HTML_ALIGN_MEMBERS     = YES
 GENERATE_HTMLHELP      = YES
 CHM_FILE               = surfit.chm
-HHC_LOCATION           = "\"C:\Program Files\HTML Help Workshop\\""
+#HHC_LOCATION           = "\"C:\Program Files\HTML Help Workshop\\""
 GENERATE_CHI           = NO
 BINARY_TOC             = YES
 TOC_EXPAND             = YES
