--- a/surfit/Makefile.am
+++ b/surfit/Makefile.am
@@ -271,37 +271,33 @@ libsurfit_la_LDFLAGS = -version-info 2:0:0 -no-undefined --dllname libsurfit.dll
 
 
 libfreeflow_ladir = $(prefix)/include/freeflow
-libfreeflow_la_SOURCES  = src/freeflow/flow.cpp              
-libfreeflow_la_SOURCES += src/freeflow/flow_data_manager.cpp 
+libfreeflow_la_SOURCES  = src/freeflow/flow_data_manager.cpp 
 libfreeflow_la_SOURCES += src/freeflow/flow_surf_internal.cpp 
 libfreeflow_la_SOURCES += src/freeflow/flow_surf_tcl.cpp 
 libfreeflow_la_SOURCES += src/freeflow/flow_variables.cpp    
-libfreeflow_la_SOURCES += src/freeflow/freeflow.cpp          
 libfreeflow_la_SOURCES += src/freeflow/freeflow_wrap.cxx     
 libfreeflow_la_SOURCES += src/freeflow/f_lcm_simple.cpp      
 libfreeflow_la_SOURCES += src/freeflow/f_lcm_simple_tcl.cpp  
-libfreeflow_la_SOURCES += src/freeflow/pcurvs_tcl.cpp        
-libfreeflow_la_SOURCES += src/freeflow/prod_area.cpp         
-libfreeflow_la_SOURCES += src/freeflow/prod_cntr.cpp         
-libfreeflow_la_SOURCES += src/freeflow/prod_iso.cpp          
-libfreeflow_la_SOURCES += src/freeflow/prod_points.cpp       
-libfreeflow_la_SOURCES += src/freeflow/prod_points_tcl.cpp   
+libfreeflow_la_SOURCES += src/freeflow/flow_curvs_tcl.cpp        
+libfreeflow_la_SOURCES += src/freeflow/flow_area.cpp         
+libfreeflow_la_SOURCES += src/freeflow/flow_cntr.cpp         
+libfreeflow_la_SOURCES += src/freeflow/flow_curv.cpp          
+libfreeflow_la_SOURCES += src/freeflow/flow_points.cpp       
+libfreeflow_la_SOURCES += src/freeflow/flow_points_tcl.cpp   
 
-libfreeflow_la_HEADERS  = src/freeflow/flow.h                  
-libfreeflow_la_HEADERS += src/freeflow/flow_data_manager.h     
+libfreeflow_la_HEADERS  = src/freeflow/flow_data_manager.h     
 libfreeflow_la_HEADERS += src/freeflow/flow_surf_internal.h 
 libfreeflow_la_SOURCES += src/freeflow/flow_surf_tcl.h 
 libfreeflow_la_HEADERS += src/freeflow/flow_ie.h               
 libfreeflow_la_HEADERS += src/freeflow/flow_variables.h        
-libfreeflow_la_HEADERS += src/freeflow/freeflow.h              
 libfreeflow_la_HEADERS += src/freeflow/f_lcm_simple.h          
 libfreeflow_la_SOURCES += src/freeflow/f_lcm_simple_tcl.h      
-libfreeflow_la_SOURCES += src/freeflow/pcurvs_tcl.h            
-libfreeflow_la_HEADERS += src/freeflow/prod_area.h             
-libfreeflow_la_HEADERS += src/freeflow/prod_cntr.h             
-libfreeflow_la_HEADERS += src/freeflow/prod_iso.h              
-libfreeflow_la_HEADERS += src/freeflow/prod_points.h           
-libfreeflow_la_SOURCES += src/freeflow/prod_points_tcl.h       
+libfreeflow_la_SOURCES += src/freeflow/flow_curvs_tcl.h            
+libfreeflow_la_HEADERS += src/freeflow/flow_area.h             
+libfreeflow_la_HEADERS += src/freeflow/flow_cntr.h             
+libfreeflow_la_HEADERS += src/freeflow/flow_curv.h              
+libfreeflow_la_HEADERS += src/freeflow/flow_points.h           
+libfreeflow_la_SOURCES += src/freeflow/flow_points_tcl.h       
 
 libfreeflow_la_LIBADD = $(LIBS_SURFIT) $(TCLLIB) libsstuff.la libsurfit.la
 libfreeflow_la_LDFLAGS = -version-info 2:0:0 -no-undefined --dllname libfreeflow.dll
