--- a/surfit/doc/surfit.cfg
+++ b/surfit/doc/surfit.cfg
@@ -93,6 +93,7 @@ INPUT                  = src/install.doc \
 			 src/examples_surf.doc \
 			 src/examples_other.doc \
   			 src/examples_dem.doc \
+			 src/examples_flow.doc \
                          src/cmofs.doc \
                          src/groups.doc \
 			 src/groups_globe.doc \
@@ -101,6 +102,7 @@ INPUT                  = src/install.doc \
   			 src/datatypes_globe.doc \
 			 src/solvers.doc \
 			 src/penalty.doc \
+			 src/freeflow.doc \
 			 ../src/surfit/cmofs.h \
 			 ../src/surfit/variables_tcl.h \
                          ../src/surfit/pnts_tcl.h \ 
@@ -118,7 +120,9 @@ INPUT                  = src/install.doc \
 			 ../src/globe/dem_tcl.h \
 			 ../src/globe/globe_surf_tcl.h \
 			 ../src/globe/dems_tcl.h \
-			 ../src/freeflow/flow_surf_tcl.h 
+			 ../src/freeflow/flow_surf_tcl.h \
+			 ../src/freeflow/flow_curvs_tcl.h \
+			 ../src/freeflow/f_lcm_simple_tcl.h 
 FILE_PATTERNS          = *.doc
 RECURSIVE              = YES
 EXCLUDE                = 
