docs added to distribution
git-svn-id: svn://localhost/trunk@731 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/Makefile.am
+++ b/surfit/Makefile.am
@@ -14,6 +14,7 @@ EXTRA_DIST += src/freeflow/interface/*.i
 EXTRA_DIST += src/globe/interface/*.i
 EXTRA_DIST += doc/gallery/*
 EXTRA_DIST += doc/src/*
+EXTRA_DIST += doc/html/*
 EXTRA_DIST += doc/surfit.cfg
 EXTRA_DIST += doc/make_doc*
 EXTRA_DIST += make_release.bat
