--- a/surfit/acmlbooster/Makefile.am
+++ b/surfit/acmlbooster/Makefile.am
@@ -9,6 +9,11 @@ EXTRA_DIST = vc6/acmlbooster*
 EXTRA_DIST += src/interface/*.i
 EXTRA_DIST += make_release.bat
 EXTRA_DIST += make_debug.bat
+EXTRA_DIST += rpmmacros
+EXTRA_DIST += make_rpm_fc4
+EXTRA_DIST += acmlbooster.spec.fc4
+EXTRA_DIST += examples/acmlbooster/*.tcl
+EXTRA_DIST += examples/acmlbooster/*.txt
 
 lib_LTLIBRARIES = libacmlbooster.la 
 
@@ -26,7 +31,10 @@ libacmlbooster_la_LDFLAGS = -version-info 1:0:0 -no-undefined --dllname libacmlb
 
 dist-hook:
 
-	rm -rf `find $(distdir) -name CVS`
+	rm -rf `find $(distdir) -name CVS`; \
+	rm -rf `find $(distdir) -name "core*"`; \
+	rm -rf `find $(distdir) -name "*.log"`; \
+	rm -rf `find $(distdir) -name "*.dat"`
 
 install-data-hook:
 
@@ -45,13 +53,25 @@ install-data-hook:
 	fi; \
 	mkdir $(DESTDIR)$(prefix)/share/$(PACKAGE)-$(VERSION)/examples
 	cp -r examples/acmlbooster/ $(DESTDIR)$(prefix)/share/$(PACKAGE)-$(VERSION)/examples; \
-	rm -rf `find $(DESTDIR)$(prefix)/share/$(PACKAGE)-$(VERSION) -name CVS`
+	rm -rf `find $(DESTDIR)$(prefix)/share/$(PACKAGE)-$(VERSION) -name CVS`; \
+	rm -rf `find $(DESTDIR)$(prefix)/share/$(PACKAGE)-$(VERSION) -name "core*"`; \
+	rm -rf `find $(DESTDIR)$(prefix)/share/$(PACKAGE)-$(VERSION) -name ".log"`; \
+	rm -rf `find $(DESTDIR)$(prefix)/share/$(PACKAGE)-$(VERSION) -name ".dat"` 
 
 install-exec-hook:
 
 	if test -f $(DESTDIR)$(bindir)/cygacmlbooster-1.dll; then \
 		rm -f $(DESTDIR)$(bindir)/libacmlbooster.dll; \
 		ln $(DESTDIR)$(bindir)/cygacmlbooster-1.dll $(DESTDIR)$(bindir)/libacmlbooster.dll; \
+	fi
+
+uninstall-hook:
+
+	if test -d "$(DESTDIR)$(prefix)/share/$(PACKAGE)-$(VERSION)"; then \
+		rm $(DESTDIR)$(prefix)/share/$(PACKAGE)-$(VERSION)/ -rf; \
+	fi; \
+	if test -f "$(DESTDIR)$(bindir)/cygacmlbooster-1.dll"; then \
+		rm -f $(DESTDIR)$(bindir)/libacmlbooster.dll; \
 	fi
 
 
