--- a/surfit/mklbooster/Makefile.in
+++ b/surfit/mklbooster/Makefile.in
@@ -214,7 +214,8 @@ target_alias = @target_alias@
 AUTOMAKE_OPTIONS = foreign
 INCLUDES = $(TCLINCLUDE) $(SSTUFFINCLUDE) $(SURFITINCLUDE) $(MKLINCLUDE)
 EXTRA_DIST = vc6/mklbooster* src/interface/*.i make_release.bat \
-	make_debug.bat rpmmacros make_rpm_fc4 mklbooster.spec.fc4 \
+	make_debug.bat rpmmacros make_rpm_fc4 make_rpm_rh73 \
+	mklbooster.spec.fc4 mklbooster.spec.rh73 \
 	examples/mklbooster/*.tcl examples/mklbooster/*.txt
 lib_LTLIBRARIES = libmklbooster.la 
 libmklbooster_ladir = $(prefix)/include/mklbooster
