--- a/surfit/acmlbooster/Makefile.in
+++ b/surfit/acmlbooster/Makefile.in
@@ -216,7 +216,8 @@ INCLUDES = $(TCLINCLUDE) $(SSTUFFINCLUDE) $(SURFITINCLUDE) $(ACMLINCLUDE)
 EXTRA_DIST = vc6/acmlbooster* src/interface/*.i make_release.bat \
 	make_debug.bat rpmmacros make_rpm_fc4 make_rpm_rh73 \
 	acmlbooster.spec.fc4 acmlbooster.spec.rh73 \
-	examples/acmlbooster/*.tcl examples/acmlbooster/*.txt
+	examples/acmlbooster/*.tcl examples/acmlbooster/*.txt \
+	doc/readme.txt
 lib_LTLIBRARIES = libacmlbooster.la 
 libacmlbooster_ladir = $(prefix)/include/acmlbooster
 libacmlbooster_la_SOURCES = src/acmlbooster.cpp \
@@ -468,7 +469,7 @@ distclean-tags:
 distdir: $(DISTFILES)
 	$(am__remove_distdir)
 	mkdir $(distdir)
-	$(mkdir_p) $(distdir)/examples/acmlbooster $(distdir)/src $(distdir)/src/interface $(distdir)/vc6
+	$(mkdir_p) $(distdir)/doc $(distdir)/examples/acmlbooster $(distdir)/src $(distdir)/src/interface $(distdir)/vc6
 	@srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`; \
 	topsrcdirstrip=`echo "$(top_srcdir)" | sed 's|.|.|g'`; \
 	list='$(DISTFILES)'; for file in $$list; do \
