--- a/surfit/mklbooster/Makefile.am
+++ b/surfit/mklbooster/Makefile.am
@@ -7,7 +7,6 @@ libtool: $(LIBTOOL_DEPS)
 INCLUDES = $(TCLINCLUDE) $(SSTUFFINCLUDE) $(SURFITINCLUDE) $(MKLINCLUDE)
 EXTRA_DIST = vc6/mklbooster*
 EXTRA_DIST += src/interface/*.i
-EXTRA_DIST += readme.txt
 EXTRA_DIST += make_release.bat
 EXTRA_DIST += make_debug.bat
 EXTRA_DIST += rpmmacros
@@ -17,6 +16,7 @@ EXTRA_DIST += mklbooster.spec.fc4
 EXTRA_DIST += mklbooster.spec.rh73
 EXTRA_DIST += examples/mklbooster/*.tcl
 EXTRA_DIST += examples/mklbooster/*.txt
+EXTRA_DIST += doc/readme.txt
 
 lib_LTLIBRARIES = libmklbooster.la 
 
