added chmod for install-sh
git-svn-id: svn://localhost/trunk@751 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/Makefile.am
+++ b/surfit/Makefile.am
@@ -350,6 +350,7 @@ libglobe_la_LDFLAGS = -version-info 2:0:0 -no-undefined --dllname libglobe.dll
 
 dist-hook:
 
+	chmod ugo+x install-sh
 	rm -rf `find $(distdir) -name CVS`; \
 	rm -rf `find $(distdir) -name "*.log"`; \
 	rm -rf `find $(distdir) -name "*.dat"`; \
