--- a/surfit/doc/surfit.cfg
+++ b/surfit/doc/surfit.cfg
@@ -103,6 +103,9 @@ INPUT                  = src/install.doc \
 			 src/solvers.doc \
 			 src/penalty.doc \
 			 src/freeflow.doc \
+			 src/globe.doc \
+			 src/acmlbooster.doc \
+			 src/mklbooster.doc \
 			 ../src/surfit/cmofs.h \
 			 ../src/surfit/variables_tcl.h \
                          ../src/surfit/pnts_tcl.h \ 
@@ -120,6 +123,7 @@ INPUT                  = src/install.doc \
 			 ../src/globe/dem_tcl.h \
 			 ../src/globe/globe_surf_tcl.h \
 			 ../src/globe/dems_tcl.h \
+			 ../src/freeflow/flow_points_tcl.h \
 			 ../src/freeflow/flow_surf_tcl.h \
 			 ../src/freeflow/flow_curvs_tcl.h \
 			 ../src/freeflow/f_lcm_simple_tcl.h 
