--- a/surfit/doc/surfit.cfg
+++ b/surfit/doc/surfit.cfg
@@ -104,8 +104,7 @@ INPUT                  = src/install.doc \
 			 src/penalty.doc \
 			 src/freeflow.doc \
 			 src/globe.doc \
-			 src/acmlbooster.doc \
-			 src/mklbooster.doc \
+			 src/boosters.doc \
 			 ../src/surfit/cmofs.h \
 			 ../src/surfit/variables_tcl.h \
                          ../src/surfit/pnts_tcl.h \ 
