--- a/surfit/doc/surfit.cfg
+++ b/surfit/doc/surfit.cfg
@@ -105,6 +105,7 @@ INPUT                  = src/install.doc \
 			 src/freeflow.doc \
 			 src/globe.doc \
 			 src/boosters.doc \
+			 src/compare.doc \
 			 ../src/surfit/cmofs.h \
 			 ../src/surfit/variables_tcl.h \
                          ../src/surfit/pnts_tcl.h \ 
