--- a/surfit/configure.in
+++ b/surfit/configure.in
@@ -16,6 +16,8 @@ AC_SUBST(LIBTOOL_DEPS)
 AC_CHECK_LIB(pthread, main, [PTHREAD_INSTALLED="YES"], PTHREAD_INSTALLED="")
 AH_TEMPLATE([HAVE_THREADS],["Define if you want to compile with multithreading support"])
 
+AH_TEMPLATE([HAVE_NETCDF],["Define if you want to compile with GMT maps format support"])
+
 # check for zlib
 AC_CHECK_HEADERS(zlib.h)
 AC_CHECK_LIB(z, zlibVersion, [ZLIB_INSTALLED="YES"], ZLIB_INSTALLED="")
@@ -129,7 +131,6 @@ if test -z "$TCLINCLUDE"; then
 	done
 fi
 if test -z "$TCLINCLUDE"; then
-#	TCLINCLUDE="-I/usr/local/include"
     	AC_MSG_ERROR(not found. surfit requies Tcl!)
 fi
 else
@@ -148,10 +149,58 @@ for i in $dirs ; do
 done
 if test -z "$TCLLIB"; then
 	AC_MSG_ERROR(not found. surfit requies Tcl!)
-#	TCLLIB="-L/usr/local/lib"
 fi
 else
 AC_MSG_RESULT($TCLLIB)
+fi
+
+#--------------------------------------------------------------------
+#	Try to locate the netcdf library
+#--------------------------------------------------------------------
+NETCDFINCLUDE=
+NETCDFLIB=
+
+AC_ARG_WITH(netcdfincl,[  --with-netcdfincl=path     Set location of netcdf include directory],[
+	NETCDFINCLUDE="-I$withval"], [NETCDFINCLUDE=])
+AC_ARG_WITH(netcdflib,[  --with-netcdflib=path      Set location of netcdf library directory],[
+	NETCDFLIB="-L$withval"], [NETCDFLIB=])
+
+AC_MSG_CHECKING(for netcdf header files)
+if test -z "$NETCDFINCLUDE"; then
+AC_TRY_CPP([#include <netcdf.h>], , NETCDFINCLUDE="")
+if test -z "$NETCDFINCLUDE"; then
+	dirs="$prefix/include /usr/local/include /usr/local/include /usr/include /opt/local/include"
+	for i in $dirs ; do
+		if test -r $i/netcdf.h; then
+			AC_MSG_RESULT($i)
+			NETCDFINCLUDE="-I$i"
+			break
+		fi
+	done
+fi
+if test -z "$NETCDFINCLUDE"; then
+    	AC_MSG_RESULT(not found. surfit will be compiled without GMT maps format support!)
+fi
+else
+        AC_MSG_RESULT($NETCDFINCLUDE)
+fi
+
+AC_MSG_CHECKING(for netcdf library)
+if test -z "$NETCDFLIB"; then
+dirs="$prefix/lib /usr/local/lib /usr/lib /opt/local/lib"
+for i in $dirs ; do
+	if test -r $i/libnetcdf.a; then
+	    AC_MSG_RESULT($i)
+	    NETCDFLIB="-L$i -lnetcdf"
+	    break
+	fi
+done
+if test -z "$NETCDFLIB"; then
+	AC_MSG_RESULT(not found. surfit will be compiled without GMT maps format support!)
+fi
+else
+	AC_MSG_RESULT($NETCDFLIB)
+	NETCDF_INSTALLED="YES"
 fi
 
 if [[ "$PTHREAD_INSTALLED" = "YES" ]] ; then 
