anisotropy for completer (D1 only)
git-svn-id: svn://localhost/trunk@801 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/Makefile.am
+++ b/surfit/Makefile.am
@@ -137,6 +137,7 @@ libsurfit_la_SOURCES += src/surfit/mask_tcl.cpp
 libsurfit_la_SOURCES += src/surfit/matlab.cpp                                                    
 libsurfit_la_SOURCES += src/surfit/matr.cpp                                                      
 libsurfit_la_SOURCES += src/surfit/matrD1.cpp                                                    
+libsurfit_la_SOURCES += src/surfit/matrD1_aniso.cpp                                                    
 libsurfit_la_SOURCES += src/surfit/matrD1_rect.cpp                                               
 libsurfit_la_SOURCES += src/surfit/matrD2.cpp                                                    
 libsurfit_la_SOURCES += src/surfit/matrD2_rect.cpp                                               
@@ -246,6 +247,7 @@ libsurfit_la_HEADERS += src/surfit/matfile.h
 libsurfit_la_HEADERS += src/surfit/matlab.h            
 libsurfit_la_HEADERS += src/surfit/matr.h              
 libsurfit_la_HEADERS += src/surfit/matrD1.h            
+libsurfit_la_HEADERS += src/surfit/matrD1_aniso.h            
 libsurfit_la_HEADERS += src/surfit/matrD2.h            
 libsurfit_la_HEADERS += src/surfit/matr_diag.h         
 libsurfit_la_HEADERS += src/surfit/matr_eye.h          
